# cmake-loki

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt
source/ext/: CMakeLists.txt
source/ext/loki/: CMakeLists.txt
source/ext/loki/loki/Reference/: AbstractFactory.h  AssocVector.h  Functor.h  Singleton.h  SmallObj.cpp  SmartPtr.h  Threads.h
source/test/: CMakeLists.txt
source/test/abstract_factory/: CMakeLists.txt  TestAbstractFactory.cpp
source/test/clone_factory/: CMakeLists.txt  TestCloneFactory.cpp
source/test/functor/: CMakeLists.txt  TestFunctor.cpp
source/test/multi_method/: CMakeLists.txt  TestMultiMethod.cpp
source/test/object_factory/: CMakeLists.txt  TestObjectFactory.cpp
source/test/singleton/: CMakeLists.txt  TestSingleton.cpp  TestSingletonCreationPolicy.cpp
source/test/singleton/creation/: CMakeLists.txt  TestSingletonCreation.cpp
source/test/singleton/creation_policy/: CMakeLists.txt  TestSingletonCreationPolicy.cpp
source/test/singleton/default_lifetime/: CMakeLists.txt  TestSingletonDefaultLifetime.cpp
source/test/singleton/lifetime_policy_default/: CMakeLists.txt  TestSingletonLifetimePolicyDefault.cpp
source/test/singleton/longevity/: CMakeLists.txt  TestSingletonLongevity.cpp
source/test/singleton/phoenix/: CMakeLists.txt  TestSingletonPhoenix.cpp
source/test/smart_ptr/: CMakeLists.txt  TestSmartPtr.cpp
source/test/thread/: CMakeLists.txt  TestThread.cpp
source/test/visitor/: CMakeLists.txt
source/test/visitor/acyclic/: CMakeLists.txt  TestAcyclicVisitor.cpp
source/test/visitor/cyclic/: CMakeLists.txt  TestCyclicVisitor.cpp
